Revert to be Java 1.8 compatible.